--- a/ML Pipeline Preparation.ipynb
+++ b/ML Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.multioutput import MultiOutputClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,9 +500,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.57      0.01      0.01      1556\n",
+      "    class 1       0.76      1.00      0.86      4952\n",
+      "    class 2       0.00      0.00      0.00        46\n",
+      "\n",
+      "avg / total       0.71      0.76      0.65      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.83      1.00      0.91      5434\n",
+      "    class 1       1.00      0.00      0.00      1120\n",
+      "\n",
+      "avg / total       0.86      0.83      0.75      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       1.00      1.00      1.00      6531\n",
+      "    class 1       0.00      0.00      0.00        23\n",
+      "\n",
+      "avg / total       0.99      1.00      0.99      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.59      1.00      0.74      3842\n",
+      "    class 1       0.75      0.00      0.00      2712\n",
+      "\n",
+      "avg / total       0.65      0.59      0.43      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.93      1.00      0.96      6073\n",
+      "    class 1       0.00      0.00      0.00       481\n",
+      "\n",
+      "avg / total       0.86      0.93      0.89      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.95      1.00      0.97      6227\n",
+      "    class 1       0.00      0.00      0.00       327\n",
+      "\n",
+      "avg / total       0.90      0.95      0.93      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.97      1.00      0.99      6378\n",
+      "    class 1       0.00      0.00      0.00       176\n",
+      "\n",
+      "avg / total       0.95      0.97      0.96      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.98      1.00      0.99      6439\n",
+      "    class 1       0.00      0.00      0.00       115\n",
+      "\n",
+      "avg / total       0.97      0.98      0.97      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.97      1.00      0.98      6331\n",
+      "    class 1       0.00      0.00      0.00       223\n",
+      "\n",
+      "avg / total       0.93      0.97      0.95      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       1.00      1.00      1.00      6554\n",
+      "\n",
+      "avg / total       1.00      1.00      1.00      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.93      1.00      0.97      6119\n",
+      "    class 1       0.00      0.00      0.00       435\n",
+      "\n",
+      "avg / total       0.87      0.93      0.90      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.89      1.00      0.94      5816\n",
+      "    class 1       0.00      0.00      0.00       738\n",
+      "\n",
+      "avg / total       0.79      0.89      0.83      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.91      1.00      0.95      5943\n",
+      "    class 1       1.00      0.00      0.01       611\n",
+      "\n",
+      "avg / total       0.92      0.91      0.86      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.99      1.00      0.99      6461\n",
+      "    class 1       1.00      0.01      0.02        93\n",
+      "\n",
+      "avg / total       0.99      0.99      0.98      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.98      1.00      0.99      6405\n",
+      "    class 1       0.00      0.00      0.00       149\n",
+      "\n",
+      "avg / total       0.96      0.98      0.97      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.99      1.00      0.99      6482\n",
+      "    class 1       0.00      0.00      0.00        72\n",
+      "\n",
+      "avg / total       0.98      0.99      0.98      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.97      1.00      0.98      6330\n",
+      "    class 1       0.00      0.00      0.00       224\n",
+      "\n",
+      "avg / total       0.93      0.97      0.95      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.96      1.00      0.98      6270\n",
+      "    class 1       0.00      0.00      0.00       284\n",
+      "\n",
+      "avg / total       0.92      0.96      0.94      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.87      1.00      0.93      5681\n",
+      "    class 1       0.00      0.00      0.00       873\n",
+      "\n",
+      "avg / total       0.75      0.87      0.80      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.94      1.00      0.97      6129\n",
+      "    class 1       0.50      0.00      0.00       425\n",
+      "\n",
+      "avg / total       0.91      0.94      0.90      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.95      1.00      0.98      6254\n",
+      "    class 1       1.00      0.00      0.01       300\n",
+      "\n",
+      "avg / total       0.96      0.95      0.93      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.95      1.00      0.97      6214\n",
+      "    class 1       0.33      0.00      0.01       340\n",
+      "\n",
+      "avg / total       0.92      0.95      0.92      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.98      1.00      0.99      6410\n",
+      "    class 1       0.00      0.00      0.00       144\n",
+      "\n",
+      "avg / total       0.96      0.98      0.97      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.99      1.00      1.00      6512\n",
+      "    class 1       0.00      0.00      0.00        42\n",
+      "\n",
+      "avg / total       0.99      0.99      0.99      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.99      1.00      1.00      6491\n",
+      "    class 1       0.00      0.00      0.00        63\n",
+      "\n",
+      "avg / total       0.98      0.99      0.99      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       1.00      1.00      1.00      6529\n",
+      "    class 1       0.00      0.00      0.00        25\n",
+      "\n",
+      "avg / total       0.99      1.00      0.99      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.99      1.00      0.99      6466\n",
+      "    class 1       0.00      0.00      0.00        88\n",
+      "\n",
+      "avg / total       0.97      0.99      0.98      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.96      1.00      0.98      6263\n",
+      "    class 1       0.00      0.00      0.00       291\n",
+      "\n",
+      "avg / total       0.91      0.96      0.93      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.73      1.00      0.84      4770\n",
+      "    class 1       1.00      0.00      0.01      1784\n",
+      "\n",
+      "avg / total       0.80      0.73      0.62      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.92      1.00      0.96      6031\n",
+      "    class 1       1.00      0.01      0.02       523\n",
+      "\n",
+      "avg / total       0.93      0.92      0.88      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.91      1.00      0.95      5958\n",
+      "    class 1       0.50      0.00      0.00       596\n",
+      "\n",
+      "avg / total       0.87      0.91      0.87      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.99      1.00      0.99      6482\n",
+      "    class 1       0.00      0.00      0.00        72\n",
+      "\n",
+      "avg / total       0.98      0.99      0.98      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.91      1.00      0.95      5935\n",
+      "    class 1       0.67      0.00      0.01       619\n",
+      "\n",
+      "avg / total       0.88      0.91      0.86      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.98      1.00      0.99      6423\n",
+      "    class 1       0.00      0.00      0.00       131\n",
+      "\n",
+      "avg / total       0.96      0.98      0.97      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.95      1.00      0.98      6254\n",
+      "    class 1       0.00      0.00      0.00       300\n",
+      "\n",
+      "avg / total       0.91      0.95      0.93      6554\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "    class 0       0.80      1.00      0.89      5251\n",
+      "    class 1       1.00      0.00      0.00      1303\n",
+      "\n",
+      "avg / total       0.84      0.80      0.71      6554\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1428: UserWarning: labels size, 2, does not match size of target_names, 3\n",
+      "  .format(len(labels), len(target_names))\n",
+      "/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1428: UserWarning: labels size, 1, does not match size of target_names, 3\n",
+      "  .format(len(labels), len(target_names))\n"
+     ]
+    }
+   ],
    "source": [
     "# Report New Model Effectiveness\n",
     "for i, col in enumerate(y_test.columns):\n",
@@ -521,15 +794,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
     "pipeline2 = Pipeline([\n",
     "         ('vect', CountVectorizer(tokenizer=tokenize)),\n",
     "         ('tfidf', TfidfTransformer()),\n",
-    "         ('mutclf', MultiOutputClassifier(AdaBoostClassifier(), n_jobs=-1))])\n"
+    "         ('mutclf', MultiOutputClassifier(AdaBoostClassifier(), n_jobs=-1))])"
    ]
   },
   {
@@ -541,13 +813,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save CV Model\n",
     "with open('model.pickle', 'wb') as file:\n",
-    "    pickle.dump(cv, f)"
+    "    pickle.dump(cv, file)"
    ]
   },
   {
